* Develop a process for completion of 'ㅝ' in NARATGUL(나랏글) Keyboard

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
             </intent-filter>
         </service>
 
-        <activity android:name="com.sb.fittingKeyboard.KeyboardSettings.MainActivity">
+        <activity android:name="com.sb.fittingKeyboard.keyboardSettings.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
