--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/AppTheme"
         tools:ignore="HardcodedDebugMode">
         <service
-            android:name="com.sb.fittingKeyboard.service.KeyboardService"
+            android:name="com.sb.fittingKeyboard.service.InputMethodServiceView"
             android:enabled="true"
             android:exported="true"
             android:label="@string/app_name"
