--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,10 +3,10 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.2"
+    compileSdkVersion 31
+    buildToolsVersion '30.0.2'
     kotlinOptions {
-        jvmTarget = "1.8"
+        jvmTarget = "11"
     }
     dataBinding {
         enabled = true
@@ -14,9 +14,9 @@ android {
     defaultConfig {
         applicationId "com.sb.fittingKeyboard"
         minSdkVersion 16
-        targetSdkVersion 30
-        versionCode 26
-        versionName "1.26"
+        targetSdkVersion 31
+        versionCode 28
+        versionName "1.28"
         multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -33,12 +33,12 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.5.21'
-    implementation 'androidx.core:core-ktx:1.6.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.4.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.github.duanhong169:colorpicker:1.1.6'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
@@ -48,4 +48,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation 'androidx.multidex:multidex:2.0.1'
+    implementation 'com.android.support:support-emoji-bundled:31.0.0'
+    implementation 'com.android.support:support-emoji:31.0.0'
+    implementation 'com.android.support:support-emoji-appcompat:31.0.0'
 }
