* Improve Codes * Imporve User Convenience

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/AppTheme"
         tools:ignore="HardcodedDebugMode">
         <service
-            android:name="com.sb.fittingKeyboard.service.InputMethodServiceViewRefactor"
+            android:name="com.sb.fittingKeyboard.service.FittingKeyboardIME"
             android:enabled="true"
             android:exported="true"
             android:label="@string/app_name"
@@ -39,3 +39,4 @@
     </application>
 
 </manifest>
+
