--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.sb.fittingkeyboard"
+<manifest package="com.sb.fittingKeyboard"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -8,13 +8,13 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:name="com.sb.fittingkeyboard.FittingKeyboard"
+        android:name="com.sb.fittingKeyboard.FittingKeyboard"
         android:supportsRtl="true"
         android:debuggable="false"
         android:theme="@style/AppTheme"
         tools:ignore="HardcodedDebugMode">
         <service
-            android:name="com.sb.fittingkeyboard.service.MainKeyboardService"
+            android:name="com.sb.fittingKeyboard.service.MainKeyboardService"
             android:enabled="true"
             android:exported="true"
             android:label="@string/app_name"
@@ -28,7 +28,7 @@
             </intent-filter>
         </service>
 
-        <activity android:name="com.sb.fittingkeyboard.keyboardsettings.ui.MainActivity"
+        <activity android:name="com.sb.fittingKeyboard.keyboardsettings.ui.MainActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
