--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,11 @@
 /.idea/workspace.xml
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
+.idea/
+.idea
+*.pem
+.github/
+.github
 .DS_Store
 /build
 /captures
